recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: value ==- is not a member of Int
if(level==-1){
        ^